fixed facet overlapping nav.

--- a/sass/facet-wp.scss
+++ b/sass/facet-wp.scss
@@ -20,9 +20,7 @@
   }
 }
 
-.facet-cont {
-  z-index: 1000;
-}
+
 
 .facetwp-facet {
   &.facetwp-type-autocomplete {
